--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-uglify": "~0.4.0"
+    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-jsdoc": "~0.5.6"
   }
 }
